# tiktok-ads-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/tiktok_ads_mcp/: __init__.py  analysis.py  cli.py  client.py  config.py  server.py
tests/: test_analysis.py  test_client.py
