[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiktok-ads-mcp"
version = "0.1.0"
description = "MCP server and CLI for TikTok Ads reporting and controlled campaign operations."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TikTok Ads MCP maintainers" }]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.2.0",
  "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
]

[project.scripts]
tiktok-ads = "tiktok_ads_mcp.cli:main"
tiktok-ads-mcp = "tiktok_ads_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tiktok_ads_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
